<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <!-- Login progress -->
    <FrameLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/map_bg" />

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/full_diveboard_grey" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.6"
                        android:background="@drawable/login_container_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ProgressBar
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/login_status_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/progress_load_data"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Login form -->

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:background="@color/yellow" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/map_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:layout_width="252dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="70dp"
                                android:layout_marginTop="0dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:src="@drawable/full_diveboard_grey" />

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha="0.6"
                                    android:background="@drawable/login_container_background" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <EditText
                                        android:id="@+id/email"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:alpha="0.85"
                                        android:background="@drawable/login_field"
                                        android:hint="@string/prompt_email"
                                        android:inputType="textEmailAddress"
                                        android:maxLines="1"
                                        android:paddingLeft="20dp"
                                        android:paddingTop="7dp"
                                        android:paddingRight="20dp"
                                        android:paddingBottom="7dp"
                                        android:singleLine="true"
                                        android:textColor="@color/dark_grey" />

                                    <EditText
                                        android:id="@+id/password"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginTop="8dp"
                                        android:alpha="0.85"
                                        android:background="@drawable/login_field"
                                        android:hint="@string/prompt_password"
                                        android:imeActionId="@+id/login"
                                        android:imeActionLabel="@string/action_sign_in_short"
                                        android:imeOptions="actionUnspecified"
                                        android:inputType="textPassword"
                                        android:maxLines="1"
                                        android:paddingLeft="20dp"
                                        android:paddingTop="7dp"
                                        android:paddingRight="20dp"
                                        android:paddingBottom="7dp"
                                        android:singleLine="true"
                                        android:textColor="@color/dark_grey" />

                                    <Button
                                        android:id="@+id/sign_in_button"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginTop="8dp"
                                        android:background="@drawable/login_button_selector"
                                        android:paddingLeft="20dp"
                                        android:paddingTop="7dp"
                                        android:paddingRight="20dp"
                                        android:paddingBottom="7dp"
                                        android:text="@string/action_login"
                                        android:textColor="@drawable/login_button_text_selector" />

                                    <com.facebook.login.widget.LoginButton
                                        android:visibility="gone"
                                        android:id="@+id/fb_login_button"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginTop="@dimen/view_double_margin"
                                        android:layout_marginBottom="@dimen/view_margin"
                                        app:com_facebook_login_text="@string/login_with_facebook" />
                                </LinearLayout>
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/signup_for_diveboard"
                    android:textSize="@dimen/text_size_big" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
